--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,16 +13,21 @@ html, body {
   .content {
     text-align: center;
   }
-
+  
   .flex-center {
     align-items: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
   }
- 
+  
   .full-height {
     height: 100vh;
+  }
+
+  h1 {
+    margin: 30px 0px 10px;
+    text-align: center;
   }
 
   .navbar-top {
