Login form refactored

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -25,6 +25,11 @@ html, body {
     height: 100vh;
   }
 
+  h1 {
+    margin: 30px 0px 10px;
+    text-align: center;
+  }
+
   .navbar-top {
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
