--- a/resources/sass/pages/authentication.scss
+++ b/resources/sass/pages/authentication.scss
@@ -1,10 +1,20 @@
-#login-page, #register-page {
+.auth-page {
     p {
         margin: 25px 0px 35px;
         text-align: center;
     }
 
+    input {
+        max-width: 500px;
+    }
+
     .row {
         margin: 1rem 0;
+    }
+
+    .alert {
+        margin: 50px auto; 
+        max-width: 600px; 
+        text-align: center;
     }
 }
